# MonitorGGWrite

./: LICENSE  README.md  README.zh-CN.md
MonitorGG/: CMakeLists.txt  Hook_GG.cpp
